[gd_scene load_steps=15 format=3 uid="uid://ck1ra11rigx5k"]

[ext_resource type="Script" path="res://testmap1.gd" id="1_foeiv"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ofear"]
sky_horizon_color = Color(0.639387, 0.658598, 0.672794, 1)
ground_bottom_color = Color(0.172549, 0.180392, 0.141176, 1)
ground_horizon_color = Color(0.639387, 0.658598, 0.672794, 1)

[sub_resource type="Sky" id="Sky_elw78"]
sky_material = SubResource("ProceduralSkyMaterial_ofear")

[sub_resource type="Environment" id="Environment_y4fx6"]
background_mode = 2
sky = SubResource("Sky_elw78")
tonemap_mode = 2

[sub_resource type="BoxMesh" id="BoxMesh_e62gp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yq2vr"]
albedo_color = Color(0.352941, 0.47451, 0, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_2unqv"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="BoxMesh" id="BoxMesh_8bi1x"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_svmrx"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="BoxMesh" id="BoxMesh_0mpwa"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tswr4"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_4hg4e"]

[sub_resource type="BoxMesh" id="BoxMesh_fcjjg"]

[sub_resource type="BoxMesh" id="BoxMesh_6agfs"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_foeiv")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_y4fx6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(18.8146, 0, 0, 0, 1, 0, 0, 0, 17.812, 0, 0, 0)
mesh = SubResource("BoxMesh_e62gp")
surface_material_override/0 = SubResource("StandardMaterial3D_yq2vr")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_2unqv")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 3.41867, 0, 0, 0, 17.3538, -9.84113, 0.98589, 0)
mesh = SubResource("BoxMesh_8bi1x")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_svmrx")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(20.0931, 0, 0, 0, 3.41867, 0, 0, 0, 0.809129, 0.291036, 0.98589, 8.87482)
mesh = SubResource("BoxMesh_8bi1x")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D4/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_svmrx")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="."]
transform = Transform3D(20.0931, 0, 0, 0, 3.41867, 0, 0, 0, 0.809129, 0.291036, 0.98589, -8.88928)
mesh = SubResource("BoxMesh_8bi1x")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D5/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_svmrx")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 3.41867, 0, 0, 0, 17.3538, 9.90903, 0.98589, 0)
mesh = SubResource("BoxMesh_8bi1x")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D3/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_svmrx")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="."]
transform = Transform3D(1.67746, 0, 0, 0, 2.47539, 0, 0, 0, 1, 0, 2.36213, -8.65036)
mesh = SubResource("BoxMesh_0mpwa")
surface_material_override/0 = SubResource("StandardMaterial3D_tswr4")

[node name="Area3D" type="Area3D" parent="MeshInstance3D6"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D6/Area3D"]
shape = SubResource("BoxShape3D_4hg4e")

[node name="point" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.12166)

[node name="point2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.65586)

[node name="thing1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.93319, 1.30313, -0.0526705)
visible = false
mesh = SubResource("BoxMesh_fcjjg")

[node name="thing2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.607459, 0.794351, 0, -0.794351, 0.607459, 0, 0, 0, 1, -4.93319, 1.40415, -0.0526705)
visible = false
mesh = SubResource("BoxMesh_6agfs")

[connection signal="body_entered" from="MeshInstance3D6/Area3D" to="." method="_on_area_3d_body_entered"]
